Fix html errors in file

--- a/happiness.html
+++ b/happiness.html
@@ -1,36 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Rutul Dav&egrave">
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Rutul Dav&egrave;">
+  <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Rutul Dav&egrave | Professional principles - Happiness</title>
+  <title>Rutul Dav&egrave; | Professional principles - Happiness</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
+  <!-- Custom styles for this template -->
+  <link href="assets/css/main.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
 
-    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8JMR386WRC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8JMR386WRC"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-8JMR386WRC');
-    </script>
-  </head>
+    gtag('config', 'G-8JMR386WRC');
+  </script>
+</head>
 
   <body>
     <div class="container">
@@ -48,17 +44,17 @@
     		<div class="col-lg-8 col-lg-offset-2">
           <p>
             <blockquote>
-              "Happiness is there when you remove the sense of something missing in your life. Happiness is the state when nothing is missing."
-              <br/>
-              <div class="text-muted">- Naval</div>
+                "Happiness is there when you remove the sense of something missing in your life. Happiness is the state when nothing is missing."
+                <br/>
+                <span class="text-muted">- Naval</span>
             </blockquote>
 
             <blockquote>
-              “Comparison is the thief of joy”
-              <br/>
-              <br/>
-              If you only wished to be happy, this could be easily accomplished; but we wish to be happier than other people,
-              and this is always difficult, for we believe others to be happier than they are.
+                “Comparison is the thief of joy”
+                <br/>
+                <br/>
+                If you only wished to be happy, this could be easily accomplished; but we wish to be happier than other people,
+                and this is always difficult, for we believe others to be happier than they are.
             </blockquote>
 
             <blockquote>
