Fix html errors in index.html

--- a/index.html
+++ b/index.html
@@ -4,23 +4,21 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Entrepreneur. Technologist. Product Maker.>
-    <meta name="author" content="Rutul Dav&egrave">
+    <meta name="description" content="Entrepreneur. Technologist. Product Maker.">
+    <meta name="author" content="Rutul Dav&egrave;">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Rutul Dav&egrave | Entrepreneur, Technologist, Product Maker</title>
+    <title>Rutul Dav&egrave; | Entrepreneur, Technologist, Product Maker</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
 
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
 
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
-
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -45,7 +43,7 @@
     <div class="container">
   		<div class="row">
   			<div class="col-lg-8 col-lg-offset-2 w">
-  				<h2>Rutul Dav&egrave</h2>
+  				<h2>Rutul Dav&egrave;</h2>
           <h5>
             <a href="https://www.linkedin.com/in/rutul-dave/" target="_blank">LinkedIn</a>
             |
