Add questions to ask about people's beliefs

--- a/questions.html
+++ b/questions.html
@@ -160,6 +160,16 @@
             <ul>
               <li>Why do you do that?</li>
               <li>Why do you think that?</li>
+              <li>
+                Topics like risk, greed, and fear are not the kind of things that we can learn and master as a society such as agriculture.
+                Some lessons have to be experienced firsthand before they can be understood. (Michael Batnik)
+                <ul>
+                  <li>Instead of asking - why do you believe that?</li>
+                  <li>Ask - “What have you experienced that I haven't that makes you believe what you do?”</li>
+                  <li>Ask - “Would I think the same thing if I experienced what you have?</li>
+                </ul>
+              </li>
+
             </ul>
           </p>
 
