Add a page for Stoicism

--- a/index.html
+++ b/index.html
@@ -92,16 +92,19 @@
                 </h4>
                 <ul class="unstyled">
                   <li>
-                    <a href="happiness.html">Happiness</a>
+                    <a href="consistency.html">Consistency</a>
                   </li>
                   <li>
-                    <a href="consistency.html">Consistency</a>
+                    <a href="happiness.html">Happiness</a>
                   </li>
                   <li>
                     <a href="monkeys-and-pedestals.html">Monkeys and Pedestals</a>
                   </li>
                   <li>
                     <a href="questions.html">Questions</a>
+                  </li>
+                  <li>
+                    <a href="stoicism.html">Stoicism</a>
                   </li>
                   <li>
                     <a href="simple-not-easy.html">Simple is not easy</a>
