Add a new question

--- a/questions.html
+++ b/questions.html
@@ -68,15 +68,16 @@
             <ul>
               <li>Instead of: When will this be done?
                 <ul>
-                  <li>When would you be surprised if we didn't have this done by?</li>
                   <li>When would you be surprised by it being done?</li>
+                  <li>When would you be surprised if we didn't have this done by?</li>
                   <li>Okay, great. So best case scenario, what are you thinking?</li>
                 </ul>
               </li>
               <li>
                 When someone explains a long, complex plan:
                   <ul>
-                    <li>All that sounds really hard. What would be easy?</li>
+                    <li>All that sounds hard. What would be easy?</li>
+                    <li>What has to be true for it to take half the time?</li>
                   </ul>
               </li>
               <li>
