--- a/simple-not-easy.html
+++ b/simple-not-easy.html
@@ -48,10 +48,10 @@
           <p>
             <h4>
               <blockquote>
-                “I didn't have time to write a short letter, so I wrote a long one instead.”
+                “Simplicity is the ultimate sophistication.”
                 <br />
                 <br />
-                <div class="text-muted">- Mark Twain</div>
+                <div class="text-muted">- Leonardo da Vince</div>
               </blockquote>
 
               <blockquote>
@@ -60,11 +60,33 @@
                 <br />
                 <div class="text-muted">- Sandi Metz</div>
               </blockquote>
-              
+
               <blockquote>
-                “The great paradox of this remarkable age is that the more complex the world around us becomes, 
-                the more simplicity we must seek in order to realize our financial goals. 
-                Please underrate neither the majesty of simplicity nor its proven effectiveness as a long-term strategy 
+                “I didn't have time to write a short letter, so I wrote a long one instead.”
+                <br />
+                <br />
+                <div class="text-muted">- Mark Twain</div>
+              </blockquote>
+
+              <blockquote>
+                “The five ascending levels of intelligence: smart, intelligent, brilliant, genius, simple.”
+                <br />
+                <br />
+                <div class="text-muted">- Albert Einstein</div>
+              </blockquote>
+
+              <blockquote>
+                “Simple can be harder than complex: You have to work hard to get your thinking clean to make it simple.
+                But it's worth it in the end because once you get there, you can move mountains.”
+                <br />
+                <br />
+                <div class="text-muted">- Steve Jobs</div>
+              </blockquote>
+
+              <blockquote>
+                “The great paradox of this remarkable age is that the more complex the world around us becomes,
+                the more simplicity we must seek in order to realize our financial goals.
+                Please underrate neither the majesty of simplicity nor its proven effectiveness as a long-term strategy
                 for productive investing. Simplicity is the master key to financial success.”
                 <br />
                 <br />
