Fix fonts and add quotes to questions.

--- a/questions.html
+++ b/questions.html
@@ -9,6 +9,9 @@
 
     <title>Rutul Dav&egrave | Professional principles - Questions</title>
 
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
+
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
@@ -16,10 +19,6 @@
 
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
-
-    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
-
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8JMR386WRC"></script>
@@ -50,45 +49,30 @@
             <blockquote>
               "Ask a better question, get a better answer."
               <br />
-              <br />
               <div class="text-muted">- Shaan Puri</div>
             </blockquote>
           </p>
           <p>
-            Inspired by Shaan Puri's idea of being a "question collector", I started doing the same
-            and now keep a running list of questions that I find valuable.
+            <blockquote>
+              "The beginner chases the right answers. The master chases the right questions."
+              <br />
+              <div class="text-muted">- James Clear</div>
+            </blockquote>
+          </p>
+          <p>
+            <blockquote>
+              "The best discoveries in life come not from finding the right answers, but from asking the right questions."
+              <br />
+              <div class="text-muted">- Unknown</div>
+            </blockquote>
           </p>
         </div>
       </div>
 
+      <hr class="soften" />
+
     	<div class="row">
     		<div class="col-lg-8 col-lg-offset-2">
-          <p>
-            <h5>Work-related:</h5>
-            <ul>
-              <li>Instead of: When will this be done?
-                <ul>
-                  <li>When would you be surprised by it being done?</li>
-                  <li>When would you be surprised if we didn't have this done by?</li>
-                  <li>Okay, great. So best case scenario, what are you thinking?</li>
-                </ul>
-              </li>
-              <li>
-                When someone explains a long, complex plan:
-                  <ul>
-                    <li>All that sounds hard. What would be easy?</li>
-                    <li>What has to be true for it to take half the time?</li>
-                  </ul>
-              </li>
-              <li>
-                When managing someone:
-                <ul>
-                  <li>What's on your mind?</li>
-                  <li>What's a conversation you've been avoiding?</li>
-                </ul>
-              </li>
-            </ul>
-          </p>
           <p>
             <h5>Small Talk/Getting to know someone:</h5>
             <ul>
@@ -153,6 +137,33 @@
               <li>What's something that everyone takes for granted that you think is hogwash?</li>
               <li>What's something you have changed your mind on over the last decade/recently?</li>
               <li>Tell me about a time when you needed to disagree with your manager or fight for a position against higher leadership.</li>
+            </ul>
+          </p>
+
+          <h5>Work-related:</h5>
+          <p>
+            <ul>
+              <li>Instead of: When will this be done?
+                <ul>
+                  <li>When would you be surprised by it being done?</li>
+                  <li>When would you be surprised if we didn't have this done by?</li>
+                  <li>Okay, great. So best case scenario, what are you thinking?</li>
+                </ul>
+              </li>
+              <li>
+                When someone explains a long, complex plan:
+                  <ul>
+                    <li>All that sounds hard. What would be easy?</li>
+                    <li>What has to be true for it to take half the time?</li>
+                  </ul>
+              </li>
+              <li>
+                When managing someone:
+                <ul>
+                  <li>What's on your mind?</li>
+                  <li>What's a conversation you've been avoiding?</li>
+                </ul>
+              </li>
             </ul>
           </p>
 
