--- a/storytelling.html
+++ b/storytelling.html
@@ -9,6 +9,9 @@
 
     <title>Rutul Dav&egrave | Storytelling</title>
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
+
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
@@ -16,10 +19,6 @@
 
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
-
-    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
-
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8JMR386WRC"></script>
@@ -48,19 +47,19 @@
           </div>
           <br/>
           <p class="lead">
-            To be interesting just tell your own story with uncommon honesty.                  
+            To be interesting just tell your own story with uncommon honesty.
             <div class="text-muted">- Kevin Kelly</div>
           </p>
           <p>
-            I love networking events, but I hate going to most of those. Some of the best learnings  and interesting conversations 
-            I have had, have happened at networking events. A networking event is where I met a tech-savvy father who created 
-            incredible bedtime stories for his kids using technology. At another event, I unexpectedly met the entire cast of 
-            the hit HBO show Silicon Valley. However, despite these memorable experiences, I've always dreaded going to networking events, 
+            I love networking events, but I hate going to most of those. Some of the best learnings  and interesting conversations
+            I have had, have happened at networking events. A networking event is where I met a tech-savvy father who created
+            incredible bedtime stories for his kids using technology. At another event, I unexpectedly met the entire cast of
+            the hit HBO show Silicon Valley. However, despite these memorable experiences, I've always dreaded going to networking events,
             and just recently I realized why.
           </p>
           <p>
-            I hate introducing myself. I am not an interesting person. 
-            I haven't been in enough unbelievable circumstances that I can describe to a stranger in a hilarious way. 
+            I hate introducing myself. I am not an interesting person.
+            I haven't been in enough unbelievable circumstances that I can describe to a stranger in a hilarious way.
             I felt I lacked the captivating life experiences that anyone meeting me for the first time would care.
           </p>
           <p>
@@ -68,43 +67,43 @@
           </p>
           <p>
             <mark>
-              “Don't get hung up on the big moments, the unbelievable circumstances, or the hilarious details. 
+              “Don't get hung up on the big moments, the unbelievable circumstances, or the hilarious details.
               Seek out the moments when you felt your heart move”
             </mark>
           </p>
           <p>
-            I learned a long time ago that to be good at something, putting in the effort and doing the work to get good at it 
-            goes a much longer way than just relying on your natural abilities. Challenge accepted. 
+            I learned a long time ago that to be good at something, putting in the effort and doing the work to get good at it
+            goes a much longer way than just relying on your natural abilities. Challenge accepted.
           </p>
           <p>
-            So in summer of 2023, I started putting in the work to become a better storyteller. 
+            So in summer of 2023, I started putting in the work to become a better storyteller.
           </p>
           <p>
             The book by Matthew Dicks has some practical exercises that I have started doing. One of them is called <strong>Homework for Life</strong>. Homework for Life is a daily exercise where you take a few minutes to reflect on your day and ask yourself one simple question:
           </p>
           <p>
             <mark>
-            “If I had to tell a story from today - a five minute story onstage about something that took place over the course of this 
+            “If I had to tell a story from today - a five minute story onstage about something that took place over the course of this
             day – what would it be? As benign and boring and inconsequential as it might seem, what was the most story-worthy moment from my day?”
             </mark>
           </p>
           <p>
-            For the past month, I've diligently practiced Homework for Life. 
-            Although it's too early to tell if it's made any difference in my storytelling abilities, 
-            or if it has increased my enthusiasm for networking events. it seems to have slowed down time a 
-            little. The last month has felt less like a bunch of days blurred together, and instead it's been a collection of 
-            memorable events that one day would be storyworthy when I introduce myself or when I tell a story. 
+            For the past month, I've diligently practiced Homework for Life.
+            Although it's too early to tell if it's made any difference in my storytelling abilities,
+            or if it has increased my enthusiasm for networking events. it seems to have slowed down time a
+            little. The last month has felt less like a bunch of days blurred together, and instead it's been a collection of
+            memorable events that one day would be storyworthy when I introduce myself or when I tell a story.
           </p>
           <p>
-            To stay consistent with this habit, I created a simple app that sends me a daily email reminder. 
-            I respond to the email with my Homework for Life note, and all these entries are collected in a list for easy review. 
+            To stay consistent with this habit, I created a simple app that sends me a daily email reminder.
+            I respond to the email with my Homework for Life note, and all these entries are collected in a list for easy review.
             This way, I can identify potential stories to share whenever I introduce myself or recount an engaging tale.
           </p>
           <p>
             If you want to practice Homework for Life, check it out here: <a href="https://storyworthy-73b339f7216e.herokuapp.com/" target="_blank">Storyworthy Exercises</a>
           </p>
           <p class="lead">
-            Tell me the facts and I'll learn. Tell me the truth and I'll believe. But tell me a story and it will live in my heart forever. 
+            Tell me the facts and I'll learn. Tell me the truth and I'll believe. But tell me a story and it will live in my heart forever.
             <div class="text-muted">- Ancient proverb</div>
           </p>
         </div>
