--- a/monkeys-and-pedestals.html
+++ b/monkeys-and-pedestals.html
@@ -9,6 +9,9 @@
 
     <title>Rutul Dav&egrave | Professional principles - Monkeys and Pedestals</title>
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
+
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
@@ -16,10 +19,6 @@
 
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
-
-    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
-
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8JMR386WRC"></script>
@@ -50,10 +49,10 @@
             <h4>
               <blockquote>
                 Figure out the hard thing first.
-                Try to solve that as quickly as possible. 
+                Try to solve that as quickly as possible.
                 Beware of false progress.
                 <br />
-                <br />            
+                <br />
                 <div class="text-muted">- Annie Duke</div>
               </blockquote>
             </h4>
@@ -65,17 +64,17 @@
           <h3>Reverse salient</h3>
           <p>
             Find the “reverse salient”
-            
+
             An idea from the history of science to generate startup ideas or ways to help in a crisis: find the reverse salient.
           </p>
           <p>
             A reverse salient is the technology or process that is holding back development of the whole system (like ⚡️car batteries did). Solving the salient unlocks change
-          </p>  
+          </p>
           <p>
             Figure out the hard thing first.
-            Try to solve that as quickly as possible. 
+            Try to solve that as quickly as possible.
             Beware of false progress.
-          </p>  
+          </p>
         </div>
       </div>
     </div>
