--- a/wealth.html
+++ b/wealth.html
@@ -9,6 +9,9 @@
 
     <title>Rutul Dav&egrave | Professional principles - Wealth</title>
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
+
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
@@ -16,10 +19,6 @@
 
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
-
-    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
-
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8JMR386WRC"></script>
@@ -51,7 +50,7 @@
                 “Wealth is what you don’t see.”
                 <br />
                 <br />
-                "The highest form of wealth is the ability to wake up every morning and say “ I can do whatever I want to do.” 
+                "The highest form of wealth is the ability to wake up every morning and say “ I can do whatever I want to do.”
                 The ability to do what you want, when you want, with who you want, for as long as you want is priceless.
                 <br />
                 <br />
@@ -62,20 +61,20 @@
                 “Being Rich is Having Money, Being Wealthy is Having Time”
               </blockquote>
               <blockquote>
-                Measure your wealth not by the things you can buy, but by the things that no money can buy. 
+                Measure your wealth not by the things you can buy, but by the things that no money can buy.
               </blockquote>
 
               <blockquote>
                 The rich have money.
-                The wealthy have time. 
+                The wealthy have time.
                 It is easier to become wealthy than rich.
                 <br />
                 <br />
                 <div class="text-muted">- Kevin Kelly</div>
               </blockquote>
-              
+
               <blockquote>
-                “It's not what a man has that constitutes as “wealth”. 
+                “It's not what a man has that constitutes as “wealth”.
                 <br />
                 No. It is to be satisfied with what one has. That is wealth.”
                 <br />
@@ -84,9 +83,9 @@
               </blockquote>
 
               <blockquote>
-                My sister isn't super rich, but she lives a rich lifestyle. She gets to walk her kids to school. 
+                My sister isn't super rich, but she lives a rich lifestyle. She gets to walk her kids to school.
                 They stop for chocolate croissants. She works out with her friends outside. She can take a nap in the middle of the day with no guilt.
-                
+
                 That's winning! You don't have to become a billionaire to have max joy.
                 <br />
                 <br />
