Adding a page for Focus

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                     <a href="consistency.html">Consistency</a>
                   </li>
                   <li>
+                    <a href="focus.html">Focus</a>
+                  </li>
+                  <li>
                     <a href="happiness.html">Happiness</a>
                   </li>
                   <li>
